[package]
name = "bonkfun-sniper"
version = "0.1.0"
edition = "2024"

[dependencies]
carbon-core = "0.9.1"
carbon-pumpfun-decoder = "0.9.1"  # Path is correct if files are siblings
carbon-raydium-launchpad-decoder = "0.9.1"  
carbon-log-metrics = "0.9.1"
carbon-yellowstone-grpc-datasource = "0.9.1"

async-trait = "0.1.88"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = "1.45.1"
yellowstone-grpc-proto = "6.1.0"

borsh = "0.10.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.145", features = ["derive"], optional = true }
serde-big-array = { version = "0.5", optional = true }
serde_with = { version = "3.12", optional = true }
solana-program = "2.1.14"
thiserror = "2.0.11"

colored = "3.0.0"
anyhow = "1.0.62"
solana-client = "2.1.14"
solana-sdk = "2.1.14"

indicatif = "0.17.8"
rand = "0.8.5"
serde_json = "1.0.86"
reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
base64 = "0.13"
bincode = "1.3.3"
bs64 = "0.1.2"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
chrono = "0.4.41"
once_cell = "1.21.3"
solana-transaction-status-client-types = "2.2"
futures = "0.3.31"
ping = "0.6.1"
dotenvy = "0.15.7"

[dependencies.rustls]
default-features = false
features = ["std", "aws_lc_rs"]
version = "0.23.0"

[features]
serde = ["dep:serde"]
